java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateLocalVariable2-hints.pass
Create Field foo in org.netbeans.test.java.hints.CreateLocalVariable2
Create Local Variable foo
